added gitignore and procfile

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,22 +22,22 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-          nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis
-          sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-          consectetur?
+          Hi, I’m Navid, a Computer Science & Engineering student at Metropolitan University, Sylhet. I enjoy solving problems and
+          building practical solutions. I’m currently pursuing a B.Sc. in Computer Science & Engineering, with a focus on
+          algorithms, data structures, and software development. My studies have fueled my curiosity to explore, learn, and
+          create.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
-          praesentium recusandae illo eaque architecto error, repellendus iusto
-          reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in
-          officia voluptas voluptatibus, minus!
+          In terms of programming, I’m experienced in Python and am currently exploring Dart for mobile app development. I’ve
+          completed over 15 projects, including Pomodoro timers and live websites, all of which you can check out on my GitHub.
+          Right now, I’m diving into mobile app development using Flutter and Dart to create intuitive apps, while also learning
+          about web development and building responsive, interactive websites. My short-term goal is to gain hands-on experience
+          through internships and team projects, while my long-term goal is to develop meaningful apps, contribute to open-source
+          projects, and share knowledge with the developer community.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-          consequuntur magnam, excepturi aliquid ex itaque esse est vero natus
-          quae optio aperiam soluta voluptatibus corporis atque iste neque sit
-          tempora!
+          I’d love to connect with you! Feel free to reach out to me via email at Navid166418@gmail.com, or connect with me on
+          GitHub, Instagram, or Facebook under the username NavidZamanKhan.
         </p>
       </div>
     </div>
